--- a/resources/config/bluecollar.yml
+++ b/resources/config/bluecollar.yml
@@ -1,10 +1,12 @@
 development:
   queues:
-    - uno
-    - dos
-    - tres
+    - {name: uno, priority: 1, pool: 1}
+    - {name: dos, priority: 9}
+    - {name: tres, priority: 5}
+  pool: 10
 test:
   queues:
-    - quatro
-    - cinco
-    - seis
+    - {name: quatro, priority: 1, pool: 1}
+    - {name: cinco, priority: 9}
+    - {name: seis, priority: 5}
+  pool: 1
