basic msg push and consume working… starting to doubt the use of defrecord is actually necessary

--- a/resources/config/bluecollar.yml
+++ b/resources/config/bluecollar.yml
@@ -4,9 +4,19 @@ development:
     - {name: dos, priority: 9}
     - {name: tres, priority: 5}
   pool: 10
+  redis:
+    host: localhost
+    port: 6379
+    db: 12
+    timeout: 1
 test:
   queues:
     - {name: quatro, priority: 1, pool: 1}
     - {name: cinco, priority: 9}
     - {name: seis, priority: 5}
   pool: 1
+  redis:
+    host: localhost
+    port: 6379
+    db: 12
+    timeout: 1
