--- a/resources/log4j.properties
+++ b/resources/log4j.properties
@@ -3,7 +3,7 @@
 log4j.rootLogger=WARN,FILE
 
 #bluecollar namespace logging level is INFO
-log4j.logger.bluecollar=INFO
+log4j.logger.bluecollar=DEBUG
 
 # FILE is set to DailyRollingFileAppender with a setting to roll over each day at midnight
 log4j.appender.FILE=org.apache.log4j.DailyRollingFileAppender
